feat(ingestion): parallelly fetch by virtual thread